<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.barfeemart.riderapp.ui.orderdetail.OrderDetailViewModel" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="ui.orderdetail.OrderDetailFragment">

        <TextView
            android:id="@+id/tv_order_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="Order # 12345-57"
            android:textColor="@color/black"
            android:textSize="18sp"
            app:layout_constraintLeft_toLeftOf="@id/guideline_left"
            app:layout_constraintTop_toTopOf="parent" />
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            android:background="@drawable/bg_white_with_orange_border"
            android:text="cancel"
            android:textColor="@color/orange"
            android:layout_marginTop="10dp"
            app:layout_constraintRight_toRightOf="@id/guideline_right"></androidx.appcompat.widget.AppCompatButton>

        <ImageView
            android:id="@+id/iv_time_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:src="@drawable/ic_baseline_access_time_24"
            app:layout_constraintLeft_toLeftOf="@id/guideline_left"
            app:layout_constraintTop_toBottomOf="@+id/tv_order_number"></ImageView>


        <TextView
            android:id="@+id/tv_order_timer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="00:15:30"
            android:textSize="18sp"
            android:layout_marginLeft="10dp"
            app:layout_constraintLeft_toRightOf="@id/iv_time_icon"
            app:layout_constraintTop_toBottomOf="@+id/tv_order_number" />

        <ImageView
            android:id="@+id/iv_home_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:src="@drawable/ic_baseline_home_24"
            app:layout_constraintLeft_toLeftOf="@id/guideline_left"
            app:layout_constraintTop_toBottomOf="@id/tv_order_timer"></ImageView>

        <TextView
            android:id="@+id/lbl_address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/delivery_address"
            android:textColor="@color/black"
            android:textStyle="bold"
            app:layout_constraintLeft_toRightOf="@id/iv_home_icon"
            app:layout_constraintTop_toBottomOf="@id/tv_order_timer"></TextView>

        <TextView
            android:id="@+id/tv_address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="High Q Tower Lahore Punjab Pakistan"
            android:textColor="@color/greyColor"
            app:layout_constraintLeft_toLeftOf="@id/guideline_left"
            app:layout_constraintTop_toBottomOf="@id/lbl_address"></TextView>

        <ImageView
            android:id="@+id/iv_person_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:src="@drawable/ic_baseline_person_24"
            app:layout_constraintLeft_toLeftOf="@id/guideline_left"
            app:layout_constraintTop_toBottomOf="@id/tv_address"></ImageView>

        <ImageView
            android:id="@+id/iv_phone_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:src="@drawable/ic_baseline_phone_enabled_24"
           app:layout_constraintRight_toRightOf="@id/guideline_right"
            app:layout_constraintTop_toBottomOf="@id/tv_address"></ImageView>

        <TextView
            android:id="@+id/lbl_customer_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/customer_name"
            android:textColor="@color/black"
            android:textStyle="bold"
            app:layout_constraintLeft_toRightOf="@id/iv_person_icon"
            app:layout_constraintTop_toBottomOf="@id/tv_address"></TextView>

        <TextView
            android:id="@+id/tv_customer_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="Kaleem Sabir"
            android:textColor="@color/greyColor"
            app:layout_constraintLeft_toLeftOf="@id/guideline_left"
            app:layout_constraintTop_toBottomOf="@id/lbl_customer_name"></TextView>

        <TextView
            android:id="@+id/lbl_order_items"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/order_items"
            android:textColor="@color/black"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="@id/guideline_left"
            app:layout_constraintTop_toBottomOf="@id/tv_customer_name"></TextView>

        <TextView
            android:id="@+id/tv_order_items"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="5"
            android:textColor="@color/greyColor"
            app:layout_constraintRight_toRightOf="@id/guideline_right"
            app:layout_constraintTop_toBottomOf="@id/tv_customer_name"></TextView>

        <TextView
            android:id="@+id/lbl_total_bill"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/total_bill"
            android:textColor="@color/black"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="@id/guideline_left"
            app:layout_constraintTop_toBottomOf="@id/lbl_order_items"></TextView>

        <TextView
            android:id="@+id/tv_total_bill"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="Rs 3313"
            android:textColor="@color/greyColor"
            app:layout_constraintRight_toRightOf="@id/guideline_right"
            app:layout_constraintTop_toBottomOf="@id/lbl_order_items"></TextView>

        <TextView
            android:id="@+id/lbl_direction"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/direction"
            android:textColor="@color/black"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="@id/guideline_left"
            app:layout_constraintTop_toBottomOf="@id/lbl_total_bill"></TextView>

        <ImageView
            android:id="@+id/iv_direction_icon"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginTop="10dp"

            android:src="@drawable/direcion_icon"
            app:layout_constraintRight_toRightOf="@id/guideline_right"
            app:layout_constraintTop_toBottomOf="@id/lbl_total_bill"></ImageView>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_reorder"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/cart_button_selector"

            android:text="@string/start_trip"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_chainStyle="spread"
            app:layout_constraintLeft_toRightOf="@+id/guideline_left"
            app:layout_constraintRight_toLeftOf="@+id/btn_add_to_cart" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_add_to_cart"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginBottom="10dp"
            android:text="@string/end_trip"
            android:textAllCaps="false"
            android:onClick="@{viewModel.moveToPaymentCollection}"
            android:background="@drawable/bg_white_with_orange_border"
            android:textColor="@color/orange"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toRightOf="@+id/btn_reorder"
            app:layout_constraintRight_toLeftOf="@+id/guideline_right" />


        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_left"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="10dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_right"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="10dp" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>